# fast_zero_sync

./: .gitignore  pyproject.toml
fastzero/: app.py  database.py  main.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 991db3eacd24_create_users_table.py  fc29749228b6_create_table_users.py
tests/: app_test.py  conftest.py  test_db.py
